--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,55 @@
 
       Welcome to CS 2350!
     </h1>
+    
+    <h3>Week 1:</h3>
+    <ul>
+      <li>Practice Activity 01: <a href="Week 1/Practice Activity 01/cs2350.html">cs2350.html</a></li>
+      <li>A simple first page: <a href="Week 1/Practice Activity 01/index.html">index.html</a></li>
+    </ul>
+
+    <h3>Week 2:</h3>
+    <ul>
+      <li>Assignment 1: <a href="Week 2/Assignment 1 - Public personal profile/index.html">index.html</a></li>
+      <li>Practice Activity 02: <a href="Week 2/Practice Activity 02/Practice Activity 02..html">Practice Activity 02.html</a></li>
+    </ul>
+
+    <h3>Week 3:</h3>
+    <ul>
+      <li>Assignment 2 - Recreating a sample page: <a href="Week 3/Assignment 2 - Recreating a sample page/thoughtful.html">thoughtful.html</a></li>
+      <li>Practice Activity 03: <a href="Week 3/Practice Activity 03/Practice Activity 03.txt">Practice Activity 03.txt</a></li>
+    </ul>
+
+    <h3>Week 4:</h3>
+    <ul>
+      <li>Assignment 3- Recreating another sample page: <a href="Week 4/Assignment 3 - Recreating another sample page/Assignment 3.html">Assignment 3.html</a></li>
+      <li>Practice Activity 04: <a href="Week 4/Practice Activity 04/index.html">index.html</a></li>
+    </ul>
+
+    <h3>Week 5:</h3>
+    <ul>
+      <li>Assignment 4 - Landing page layout: <a href="Week 5/Assignment 4 - Landing page layout/index.html">index.html</a></li>
+      <li>Practice Activity 05: <a href="Week 5/Practice Activity 05/practice05.html">practice05.html</a></li>
+    </ul>
+
+    <h3>Week 6:</h3>
+    <ul>
+      <li>Assignment 5 - Page layout with Flexbox: <a href="Week 6/Assignment 5 - Page layout with Flexbox/index.html">index.html</a></li>
+      <li>Practice Activity 06: <a href="Week 6/Practive Activity 06/index.html">index.html</a></li>
+    </ul>
+
+    <h3>Week 7:</h3>
+    <ul>
+      <li>Assignment 6 - A simple form: <a href="Week 7/Assignment 6 - A simple form/index.html">index.html</a></li>
+      <li>Practice Activity 07: <a href="Week 7/Practice Activity 07/example01.html">example01.html</a></li>
+    </ul>
+
+    <h3>Week 9:</h3>
+    <ul>
+      <li>Assignment 7 - A canvas 2D graphics scene: <a href="Week 9/Assignment 7 - A canvas 2D graphics scene/index.html">index.html</a></li>
+      <li>Practice Activity 08: <a href="Week 9/Practice Activity 08/multiTable.html">multiTable.html</a></li>
+      <li>Class project idea: <a href=""></a></li>
+    </ul>
 
     <script type="module" src="./javascripts/main.js"></script>
   </body>
