--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,12 @@
       <li>Class project idea: <a href=""></a></li>
     </ul>
 
+    <h3>Week 10:</h3>
+    <ul>
+      <li>Assignment 8 - A responsive image gallery: <a href=""></a></li>
+      <li>Practice Activity 09: <a href="Week 10/Practice Activity 09/index.html">index.html</a></li>
+    </ul>
+
     <script type="module" src="./javascripts/main.js"></script>
   </body>
 </html>
