--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,7 @@
 
     <h3>Week 10:</h3>
     <ul>
-      <li>Assignment 8 - A responsive image gallery: <a href=""></a></li>
+      <li>Assignment 8 - A responsive image gallery: <a href="Week 10/Assignment 8 - A responsive image gallery/Image gallery.html">Image gallery.html</a></li>
       <li>Practice Activity 09: <a href="Week 10/Practice Activity 09/index.html">index.html</a></li>
     </ul>
 
